@@ -54,8 +54,6 @@ Mods: {
 			}
 		}
 
-		Projectiles.DivineDustProjectile.DisplayName: Священная пыль
-
 		Biomes: {
 			CorruptJungle: {
 				DisplayName: Искажённые джунгли
